--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,3 +1,3 @@
-threadPoolSize 5
-mazeGeneratingAlgorithm MyMazeGenerator
-mazeSearchingAlgorithm BestFirstSearch
+threadPoolSize=6
+mazeGeneratingAlgorithm=MyMazeGenerator
+mazeSearchingAlgorithm=DepthFirstSearch
